syntax= "proto3";

option java_multiple_files =true;
option java_package= "com.chefservicegrpc.grpc";


service receta {
    rpc CrearReceta(RecetaRequest) returns (RecetaResponse){}
    rpc EditarReceta(RecetaRequest) returns (RecetaResponse){}
    rpc TraerRecetasPorId(UsuarioRequest3) returns (stream RecetaResponse){}
    rpc TraerRecetas(ListaRecetasRequest) returns (stream RecetaResponse){}
}
message Receta {
    int64 id = 1;
    string titulo = 2;
    string descripcion = 3;
    string categoria = 4;
    int32 tiempo_aprox = 5;
    repeated Ingrediente ingredientes = 6;
    repeated Paso pasos = 7;
}
message UsuarioRequest3{
    int64 id=1;
}
message Ingrediente {
    string nombre = 1;
    string cantidad = 2;
}

message Paso {
    int32 numero = 1;
    string descripcion = 2;
}

message RecetaRequest {
    int64 idUsuario=1;
    string titulo = 2;
    string descripcion = 3;
    string categoria = 4;
    int32 tiempo_aprox = 5;
    repeated Ingrediente ingredientes = 6;
    repeated Paso pasos = 7;
}

message RecetaResponse {
    int64 id = 1;
    string titulo = 2;
    string descripcion = 3;
    string categoria = 4;
    int32 tiempo_aprox = 5;
    repeated Ingrediente ingredientes = 6;
    repeated Paso pasos = 7;
}


message UsuarioRequest{
    int64 id=1;
}

message ListaRecetasRequest {
    string titulo = 1;
    string categoria = 2;
    int32 page = 3;
    int32 size = 4;
    string order_by = 5;
    string sort_by = 6;
}
